.k8s/deploy-svc.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
    name: deploy-acud2backend
    labels:
        app: acud2backend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: acud2backend
    template:
        metadata:
            labels:
                app: acud2backend
        spec:
            containers:
                - name: webserver
                  image:  GHCR_IMAGE
                  ports:
                      - containerPort: 80
---
# Service
apiVersion: v1
kind: Service
metadata:
    name: svc-acud2backend
    labels:
        app: server
spec:
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
    selector:
        app: acud2backend
    type: NodePort
