.k8s/ingress.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-acud2backend
    labels:
        app: acud2backend
    annotations:
        kubernetes.io/ingress.class: alb
        alb.ingress.kubernetes.io/certificate-arn: CRT_ARN
        alb.ingress.kubernetes.io/group.name: EKS_INGRESS_GROUP
        alb.ingress.kubernetes.io/scheme: internet-facing
spec:
    rules:
        - host: HOST
          http:
              paths:
                  - path: /*
                      # AWS Load Balancer Controller only supports "ImplementationSpecific" paths for now.
                      # See https://github.com/kubernetes-sigs/aws-load-balancer-controller/issues/1702
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: svc-acud2backend
                            port:
                                number: 80
    tls:
        - hosts:
              - HOST
